--- a/Submission DR/Revision/Manuscript/Bib_FormalDemo.bib
+++ b/Submission DR/Revision/Manuscript/Bib_FormalDemo.bib
@@ -1,5 +1,34 @@
 % Encoding: UTF-8
 
+
+@book{keyfitz1968introduction,
+  title={Introduction to the mathematics of populations},
+  author={Keyfitz, Nathan},
+  publisher={Addison-Wesley Series in Behavioral Science: Quantitative Methods},
+  year={1968}
+}
+
+@article{demetrius1974demographic,
+  title={Demographic parameters and natural selection},
+  author={Demetrius, Lloyd},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={71},
+  number={12},
+  pages={4645--4647},
+  year={1974},
+  publisher={National Acad Sciences}
+}
+
+@article{aburto2019upsurge,
+  title={Upsurge of Homicides and Its Impact on Life Expectancy and Life Span Inequality in Mexico, 2005--2015},
+  author={Aburto, Jos{\'e} Manuel and Beltr{\'a}n-S{\'a}nchez, Hiram},
+  journal={American journal of public health},
+  volume={109},
+  number={3},
+  pages={483--489},
+  year={2019},
+  publisher={American Public Health Association}
+}
 @article{aburto2018potential,
   title		= {Potential gains in life expectancy by reducing inequality of lifespans in {D}enmark: An international comparison and cause-of-death analysis},
   author	= {Aburto, Jos{\'e} Manuel and Wensink, Maarten and van Raalte, Alyson and Lindahl-Jacobsen, Rune},
